--- a/2_SortLog/Makefile
+++ b/2_SortLog/Makefile
@@ -1,6 +1,8 @@
 CC = g++
 CFLAGS = -Wall -Wextra -Werror -pedantic -std=c++17 -I include/
-C_DEBUG_FLAGS = -Wall -Wextra -Werror -pedantic -std=c++17 -I include/
+C_DEBUG_FLAGS = -Wall -Wextra -Werror -pedantic -std=c++17 -I include/ -g
+HEADERS = include/ConsoleLogger.h include/Elem.h
+SRC = src/main.cpp src/Elem.cpp src/ConsoleLogger.cpp
 
 all: build
 	./build/main.out
@@ -12,8 +14,8 @@ build-debug: build/mainDebug.out
 clean:
 	rm -rf build/*
 
-build/main.out: src/main.cpp src/Elem.cpp src/ConsoleLogger.cpp
-	$(CC) $(CFLAGS) $< -o $@
+build/main.out: $(SRC) $(HEADERS)
+	$(CC) $(CFLAGS) src/*.cpp -o $@
 
-build/mainDebug.out: src/main.cpp src/Elem.cpp src/ConsoleLogger.cpp
-	$(CC) $(C_DEBUG_FLAGS) $< -o $@
+build/mainDebug.out: $(SRC) $(HEADERS)
+	$(CC) $(C_DEBUG_FLAGS) src/*.cpp -o $@
